--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,6 @@
 body{
 	font-size: 100%;
 }
-
-
-
-
-
 /* header */
 .home{
 	background-image: url(../images/index/main-bg.jpg);
@@ -79,10 +74,156 @@ main div a{
 	text-decoration: none;
 }
 
-/* main */
+/* news */
 
+/* news head */
+.heading{
+	background-image: url(../images/news/news-bg.jpg);
+	width: 1440px;
+	height: 300px;
+}
+
+.bold{
+	font-family: 'Philosopher', sans-serif;
+	font-size: 70px;
+	font-weight: 200;
+	margin-top: 60px;
+	margin-left: 687px;
+}
+
+/* news main */
+/* news article */
+.column{
+	display:-webkit-flex;
+	display: flex;
+	margin-left: 400px;
+}
+.column img{
+	width: 490px;
+	height: 390px;
+}
+
+.column .date{
+position: absolute;
+	background: rgb(1, 178, 217);
+	width: 130px;
+	height: 130px;
+	border-radius: 150px;
+	color: rgb(219, 245, 250);
+	position: absolute;
+	left: 150px;
+	top: 180px;
+}
+
+.column .date2{
+	position: absolute;
+	top: -160px;
+	left: -20px;
+}
+
+.column .date2 h2{
+font-family: 'PT Sans Narrow', sans-serif;
+	font-size: 35px;
+	font-weight: 100;
+	border-bottom: 1px solid rgb(219, 245, 250);
+	line-height: 1.7em;
+	letter-spacing: 0.1em;
+
+}
+.column .date2 h3{
+	font-family: 'PT Sans Narrow', sans-serif;
+	font-size:25px;
+	font-weight: 100;
+	margin-top: 5px;
+	line-height: 1.7em;
+	letter-spacing: 0.1em;
+
+}
+
+.subtitle h1{
+	font-family: serif;
+	text-align: left;
+	font-size: 35px;
+	margin-top: -130px;
+	margin-left: -150px;
+	line-height: 70px;
+}
+.subtitle h3{
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 200;
+	text-align: left;
+	margin-left: -150px;
+	margin-top: -25px;
+
+}
+
+.column img{
+	width: 650px;
+	height: 400px;
+	margin-left: -200px;
+	margin-top: 45px;
+	margin-bottom: 30px;
+}
+
+.column p{
+	
+	margin-left: -200px;
+	line-height: 27px;
+}
+.column  .marginp{
+	margin-top: 25px;
+
+}
+.column  .marginp2{
+	margin-top: 20px;
+	margin-bottom: 60px;
+}
+/* news aside */
+.column aside ul{
+	list-style-type: none;
+	margin-left: 195px;
+	margin-top: 25px;
+}
+
+aside ul li{
+	padding-top:10px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid rgb(237,237,237);
+}
+			
+aside .hlist{	
+	font-size: 20px;
+	font-weight: 100;
+	border-bottom: solid rgb(1, 178, 217) 3px;
+	padding-bottom: 15px;
+
+}
+
+aside .center{
+margin-left: 0px;
+}
+aside div{
+	margin-left: 390px;
+	margin-top: 70px;
+	text-align: left;
+	
+}
+
+
+aside .p1{
+	font-size: 30px;
+	font-weight: 100px;
+}
 /* footer */
 footer{
 	text-align: center;
+	background: rgb(52, 34, 18);
+	height: 60px;
+}
+footer small p{
+	font-size: 10px;
+	color: rgb(224, 223, 220);
+	padding-top:25px;
 }
 /* form */
