--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,26 @@
 @charset "UTF-8";
+/* タブレット */
+@media screen and (min-width:959px){
+
+}
+/* スマホ（Android/iPhone） */
+@media screen and (min-width:600px){
+
+	body{
+		font-size: 3vw;
+	}
+}
 
 /* body */
 body{
 	font-size: 100%;
 }
+
+body image{
+	width: 100%;
+	display: block;
+}
+
 /* header */
 .home{
 	background-image: url(../images/index/main-bg.jpg);
@@ -14,21 +31,42 @@ header{
 margin: 0;
 padding: 0%;
 }
-header img{
-	width: 300px;
-	height: 200px;
-	margin:-50px 0 0 200px;
+header .margin{
+	margin:-32px 0 0 187px;
+}
+header a img{
+	width: 230px;
+	height: 150px;
+
+}
+
+header nav{
+	margin:28px 0 0 -85px;
 }
 header ul{
 display: flex;
 justify-content: center;
-margin:-120px 0 0 750px;
+margin:-118px 0 0 800px;
 
 }
 header ul li{
 	list-style-type: none;
-	padding-right: 2em;
+	padding-right: 2.5em;
+	font-weight: 500;
+	font-size: 18px;
+}
 
+
+
+header .navmargin{
+	margin:23px 0 0 -135px;
+}
+
+header .navmargin ul li{
+	list-style-type: none;
+	padding-right: 2.0em;
+	font-weight: 500;
+	font-size: 18px;
 }
 
 header ul li a{
@@ -55,7 +93,6 @@ main div h1{
 
 main div p{
 margin-top: 20px;
-
 font-size: 19px;
 }
 
@@ -76,7 +113,7 @@ main div a{
 
 /* news */
 
-/* news head */
+/* news header */
 .heading{
 	background-image: url(../images/news/news-bg.jpg);
 	width: 1440px;
@@ -122,7 +159,7 @@ position: absolute;
 }
 
 .column .date2 h2{
-font-family: 'PT Sans Narrow', sans-serif;
+	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 35px;
 	font-weight: 100;
 	border-bottom: 1px solid rgb(219, 245, 250);
@@ -143,10 +180,10 @@ font-family: 'PT Sans Narrow', sans-serif;
 .subtitle h1{
 	font-family: serif;
 	text-align: left;
-	font-size: 35px;
-	margin-top: -130px;
+	font-size: 30px;
+	margin-top: -110px;
 	margin-left: -150px;
-	line-height: 70px;
+
 }
 .subtitle h3{
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -197,7 +234,7 @@ aside .hlist{
 	font-weight: 100;
 	border-bottom: solid rgb(1, 178, 217) 3px;
 	padding-bottom: 15px;
-
+	width: 240px;
 }
 
 aside .center{
@@ -205,16 +242,420 @@ margin-left: 0px;
 }
 aside div{
 	margin-left: 390px;
-	margin-top: 70px;
+	margin-top: 60px;
 	text-align: left;
 	
 }
-
 
 aside .p1{
 	font-size: 30px;
 	font-weight: 100px;
 }
+
+/* menu */
+
+/* menu header */
+.heading2{
+	background-image: url(../images/menu/menu-bg.jpg);
+	width: 100%;
+	height: 690px;
+	background-size: cover;
+	background-blend-mode: screen;
+	background-color:  rgba(255, 255, 255, 0.45);;
+}
+
+.menudes{
+	margin-top: 170px;
+
+}
+.menudes h1{
+	margin-top: 0px;
+	margin-left: 620px;
+	font-size: 75px;
+	font-weight: 100;
+	color: rgb(52, 34, 18);
+	font-family: 'Philosopher', sans-serif;
+}
+.menudes p{
+margin-left: 500px;
+margin-top: 10px;
+font-size: 18px;
+}
+
+.tilelayout{
+	margin: 100px 0 -60px 0;
+}
+
+/* main grid */
+main .tile{
+	display: grid;
+	grid-template-columns:  330px 330px 350px;
+	grid-template-rows: 260px 269px 255px;
+	margin: 0 auto;
+	display: flexbox;
+}
+
+main .responsegrid
+{
+	grid-template-columns: repeat(auto-fit);
+}
+main .centerout{
+	margin-left: 230px;
+}
+main .tile1{
+	width: 650px;
+	height: 510px;
+	padding-right: 15px;
+	padding-bottom: 50px;
+	grid-template-columns: repeat(auto-fit minmax(300px,650px));
+}
+
+
+main .small1{
+	grid-column: 1;
+	grid-row: 1;
+}
+
+
+main .text1{
+	font-weight: 100;
+	font-size: 17px;
+	margin-top: 470px;
+	margin-left: -65px;
+}
+
+main .tile2{
+	width: 310px;
+	height: 200px;
+	display: flex;
+}
+
+main .small2{
+	grid-column: 4/3;
+	grid-row: 1/2;
+}
+
+main .text2{
+	font-weight: 100;
+	font-size: 17px;
+	margin-top: 210px;
+	margin-left: -85px;
+}
+
+main .tile3 {
+	width: 310px;
+	height: 200px;
+
+}
+
+main .small3{
+	grid-column: 4/3;
+	grid-row: 2/3;
+}
+
+main .text3{
+	font-weight: 100;
+	font-size: 17px;
+	margin-top: 210px;
+	margin-left: -75px;
+}
+
+main .tile4{
+	width: 310px;
+	height: 200px;
+	padding-bottom: 20px;
+}
+
+main .small4{
+	grid-column: 1/3;
+	grid-row: 3/3;
+}
+
+main .text4{
+	font-weight: 100;
+	font-size: 17px;
+	margin-top: 190px;
+	margin-left: -395px;
+
+}
+
+main .tile5{
+	width: 310px;
+	height: 200px;
+	padding-bottom: 20px;
+}
+
+main .small5{
+grid-column: 3/2;
+grid-row: 3/4;
+}
+
+main .text5{
+	font-weight: 100;
+	font-size: 17px;
+	margin-top: 190px;
+	margin-left: -65px;
+}
+
+main .tile6{
+	width: 310px;
+	height: 200px;
+	padding-bottom: 20px;
+}
+
+main .small6{
+grid-column: 3/3;
+grid-row: 4/3;
+}
+
+main .text6{
+	font-weight: 100;
+	font-size: 17px;
+	margin-top: 190px;
+	margin-left: -80px;
+}
+
+main .tile7{
+	width: 310px;
+	height: 200px;
+	padding-bottom: 20px;
+}
+
+main .small7
+{
+grid-column: 4/1;
+grid-row: 4/4;
+}
+
+main .text7{
+	font-weight: 100;
+	font-size: 17px;
+	margin-top: 190px;
+	margin-left: -740px;
+}
+
+main .tile8{
+	width: 310px;
+	height: 200px;
+	padding-bottom: 20px;
+}
+
+main .small8{
+	grid-row: 4/5;
+	grid-column: 4/2;
+	}
+
+	main .text8{
+		font-weight: 100;
+		font-size: 17px;
+		margin-top: 190px;
+		margin-left: -410px;
+	}
+
+main .tile9{
+	width: 310px;
+	height: 200px;
+	padding-bottom: 20px;
+}
+
+main .small9{
+	grid-column: 4/3;
+	grid-row: 4/6;
+	}  
+
+	main .text9{
+		font-weight: 100;
+		font-size: 17px;
+		margin-top: 190px;
+		margin-left: -90px;
+	}
+
+	section{
+		margin-bottom: 50px;
+	}
+
+	/* contact header */
+	.contactimg{
+		padding-left: 40px;
+		background-image: url(../images/contact/contact-bg.jpg);
+		width: 100%;
+		height: 687px;
+		background-size: 111% ;
+		background-blend-mode: screen;
+		background-color:  rgba(255, 255, 255, 0.45);
+		
+	}
+
+	.contactimg h1{
+		margin-top: 50px;
+		margin-bottom: 30px;
+		margin-left: 185px;
+		font-size: 80px;
+		font-weight: 100;
+		color: rgb(52, 34, 18);
+		font-family: 'Philosopher', sans-serif;
+	} 
+
+	form{
+		margin-top: 30px;
+		margin-left: 190px;
+	}
+
+
+	form p{
+		margin-top: 20px;
+		margin-bottom: 15px;
+	}
+	form input[type="text"]{
+		background: rgba(252,252,252,0.5);
+		border: 1px solid rgb(252,252,252);
+		border-radius: 5px 5px 5px 5px;
+		width: 230px;
+		height: 40px;
+	}
+
+	form input[type="email"]{
+		background: rgba(252,252,252,0.5);
+		border: 1px solid rgb(252,252,252);
+		border-radius: 5px 5px 5px 5px;
+		width: 230px;
+		height: 40px;
+	}
+
+	form textarea{
+		background: rgba(252,252,252,0.5);
+		border: 1px solid rgb(252,252,252);
+		border-radius: 5px 5px 5px 5px;
+	  width: 467px;
+	  height:95px;
+	}
+
+	form input[type="submit"]{
+		margin-top: 15px;
+		background: rgb(1, 178, 217);
+		border-radius: 5px 5px 5px 5px;
+		color: rgb(219, 245, 250);
+		width: 100px;
+		height: 55px;
+		font-size: 18px;
+	}
+
+	/* contact main */
+	/* contact main map */
+	main .block{
+		margin-top: -95px;
+	}
+
+	main .block .areatitle{
+		font-weight: 100;
+		font-size: 20px;
+		text-align: left;
+		border-bottom: 2px solid rgb(1, 178, 217);
+		color: rgb(76, 59, 45);
+		padding-bottom: 15px;
+		margin-bottom: 10px;
+		width: 200px;
+	}
+	main .block .mappos{
+		margin-left: -155px;
+	}
+
+main .block .desmap{
+float: left;
+margin-top: 1px;
+margin-left: 200px;
+}
+main .block .desmap dl{
+	width: 200px;
+
+}
+
+main .block .desmap dt,
+main .block .desmap dd{
+	padding-top: 5px;
+	padding-bottom: 1px;
+}
+
+main .block .desmap dt{
+	float: left;
+	color: rgb(76, 59, 45);
+
+}
+main .block .desmap dd{
+	text-align: left;
+	color: rgb(76, 59, 45);
+}
+
+main .block .desmap .dt1{
+padding-right: 10px;
+
+}
+	/* contact SNS */
+	main .asidside{
+		background: rgb(251,246,238);
+	width: 1440px;
+	height: 570px;
+	margin-top: 60px;
+	}
+
+	main .asidside .asidegrid{
+		margin-top: 0px;
+		margin-left: 225px;
+		display: grid;
+		gap: 30px 40px;
+		grid-template-columns: 300px 300px 300px;
+		grid-template-rows: 40px 50px 305px;
+	}
+	
+	main .asidside .sns1{
+		font-weight: 100;
+		font-size: 20px;
+		border-bottom: 2px solid rgb(1, 178, 217);
+		color: rgb(76, 59, 45);
+		width: 300;
+		text-align: left;
+		grid-column: 2/1;
+		grid-row: 2/2;
+	}
+	main .asidside .sns2{
+		font-weight: 100;
+		font-size: 20px;
+		border-bottom: 2px solid rgb(1, 178, 217);
+		color: rgb(76, 59, 45);
+		width: 300;
+		text-align: left;
+		grid-column: 2/2;
+		grid-row: 2/2;
+	}
+	main .asidside .sns3{
+
+		font-weight: 100;
+		font-size: 20px;
+		border-bottom: 2px solid rgb(1, 178, 217);
+		color: rgb(76, 59, 45);
+		width: 300;
+		text-align: left;
+		grid-column: 3/3;
+		grid-row: 2/2;
+	}
+
+	main .asidegrid .iframe1{
+		grid-column: 3/1;
+		grid-row: 3/4;
+	}
+
+	main .asidegrid .twitter-timeline{
+	grid-column: 2/2;
+	grid-row: 3/5;	
+	}
+
+	main .asidegrid .iframe3{
+		grid-column: 3/3;
+		grid-row: 3/5;	
+	}
+	main .mag{
+		margin-top: -100px;
+	}
 /* footer */
 footer{
 	text-align: center;
@@ -226,4 +667,11 @@ footer small p{
 	color: rgb(224, 223, 220);
 	padding-top:25px;
 }
-/* form */
+
+.contactcopy{
+	/* margin-bottom: -15px; */
+	margin-top: -110px;
+}
+.contactcopy .empty{
+	margin-top: -5px;
+}
